Removed usage of Stream.toList()
Android projects don't support this java feature (not entirely sure why as other java 16 features seem to but oh well we make do). Changed to Stream.collect(Collectors.toList());